(library
 (public_name gamelle.sdl)
 (name gamelle_sdl)
 (private_modules
  bitmap
  common
  draw
  events_sdl
  font_
  sdl_base
  sdl_buffer
  text
  sound
  window
  replay)
 (libraries
  gamelle_common
  uuseg
  tsdl
  tsdl-image
  tsdl-mixer
  tsdl-ttf
  tsdl_gfx
  ctypes)
 (implements gamelle))
