(library
 (name js_test)
 (modules js_test assets)
 (libraries gamelle))

(rule
 (target assets.ml)
 (deps
  (source_tree assets))
 (action
  (with-stdout-to
   assets.ml
   (chdir
    assets
    (run %{bin:gamelle} assets pack)))))

(executable
 (name js_test_bin)
 (modules js_test_bin)
 (libraries js_test gamelle_sdl))

(executable
 (name js_test_js)
 (modules js_test_js)
 (modes js)
 (libraries js_test gamelle_jsoo))

(rule
 (target index.html)
 (deps index.html.template js_test_js.bc.js)
 (action
  (with-stdout-to
   index.html
   (run
    %{bin:gamelle}
    html
    --template=index.html.template
    --script=js_test_js.bc.js))))
