(env
 (dev
  (flags
   (:standard -warn-error -A))))

(executable
 (public_name morpion)
 (name morpion_bin)
 (modules morpion_bin)
 (libraries morpion gamelle.sdl))

(rule
 (target morpion_bin.ml)
 (action
  (with-stdout-to
   morpion_bin.ml
   (run echo "include Morpion"))))

(executable
 (name morpion_js)
 (modules morpion_js)
 (modes js)
 (libraries morpion gamelle.jsoo))

(rule
 (target morpion_js.ml)
 (action
  (with-stdout-to
   morpion_js.ml
   (run echo "include Morpion"))))

(rule
 (target morpion.html)
 (deps morpion.template.html morpion_js.bc.js)
 (action
  (with-stdout-to
   morpion.html
   (run
    %{bin:gamelle}
    html
    --template=morpion.template.html
    --script=morpion_js.bc.js))))
