(env
 (dev
  (flags
   (:standard -warn-error -A))))

(executable
 (public_name snake)
 (name snake_bin)
 (modules snake_bin)
 (libraries snake gamelle.sdl))

(rule
 (target snake_bin.ml)
 (action
  (with-stdout-to
   snake_bin.ml
   (run echo "include Snake"))))

(executable
 (name snake_js)
 (modules snake_js)
 (modes js)
 (libraries snake gamelle.jsoo))

(rule
 (target snake_js.ml)
 (action
  (with-stdout-to
   snake_js.ml
   (run echo "include Snake"))))

(rule
 (target snake.html)
 (deps snake.template.html snake_js.bc.js)
 (action
  (with-stdout-to
   snake.html
   (run
    %{bin:gamelle}
    html
    --template=snake.template.html
    --script=snake_js.bc.js))))
