(env
 (dev
  (flags
   (:standard -warn-error -A))))

(executable
 (public_name ui_sync)
 (name ui_sync_bin)
 (modules ui_sync_bin)
 (libraries ui_sync gamelle.sdl))

(rule
 (target ui_sync_bin.ml)
 (action
  (with-stdout-to
   ui_sync_bin.ml
   (run echo "include Ui_sync"))))

(executable
 (name ui_sync_js)
 (modules ui_sync_js)
 (modes js)
 (flags )
 (libraries ui_sync gamelle.jsoo))

(rule
 (target ui_sync_js.ml)
 (action
  (with-stdout-to
   ui_sync_js.ml
   (run echo "include Ui_sync"))))

(rule
 (target ui_sync.html)
 (deps ui_sync.template.html ui_sync_js.bc.js)
 (action
  (with-stdout-to
   ui_sync.html
   (run
    %{bin:gamelle}
    html
    --template=ui_sync.template.html
    --script=ui_sync_js.bc.js))))
